--- a/src/FlaUI.Fluent/FlaUI.Fluent.csproj
+++ b/src/FlaUI.Fluent/FlaUI.Fluent.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard20;netcoreapp31;</TargetFrameworks>
+    <TargetFramework>netstandard20</TargetFramework>
     <LangVersion>8</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
