--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         dotnet: [ '3.1.200' ]
-        os: [ubuntu-latest, ubuntu-16.04, windows-latest, macos-latest]
+        os: [windows-latest]
 
     runs-on: ${{ matrix.os }}
     name: ${{ matrix.os }} - ${{ matrix.dotnet }}
@@ -40,5 +40,8 @@ jobs:
     
     - name: Run tests
       run: dotnet test --configuration Release --nologo
+      
+    - name: Try Publish(if the version has changed) FlaUI.Fluent
       if: runner.os == 'Windows' &&
-          matrix.dotnet == '3.1.100' 
+          matrix.dotnet == '3.1.100'
+      run: dotnet nuget push src\FlaUI.Fluent\bin\Release\FlaUI.Fluent.*.nupkg -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json; exit 0
