--- a/src/FlaUI.Fluent/FlaUI.Fluent.csproj
+++ b/src/FlaUI.Fluent/FlaUI.Fluent.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard20</TargetFramework>
+    <TargetFrameworks>netstandard20;net45;</TargetFrameworks>
     <LangVersion>8</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Label="Nuget">
-    <Version>0.1.0</Version>
+    <Version>0.1.1</Version>
     <Authors>havendv</Authors>
     <Company>havendv</Company>
     <Description>Fluent interface for Find methods of FlaUI AutomationElement's</Description>
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <PackageReference Include="FlaUI.UIA3" Version="3.0.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" Condition="'$(TargetFramework)' == 'net45'" />
   </ItemGroup>
 
 </Project>
