--- a/src/FlaUI.Fluent.Tests/FlaUI.Fluent.Tests.csproj
+++ b/src/FlaUI.Fluent.Tests/FlaUI.Fluent.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp31</TargetFramework>
+    <TargetFrameworks>netcoreapp31;net48;</TargetFrameworks>
     <LangVersion>8</LangVersion>
     <Nullable>enable</Nullable>
     <TestProjectType>UnitTest</TestProjectType>
